# CipherEngine

./: CHANGELOG.md  CLI-OPTIONS.md  MANIFEST.in  Makefile  README.md  cipher_engine.py  pyblack.toml  requirements.txt  setup.cfg  setup.py  tox.ini
src/: cipher_engine.py
src/cipher_engine/: __init__.py  cipher_engine.py  cli_options.py
tests/: test_cipher.py
tests/test_files/: decrypted_encrypted_test_unencrypted_file.dec  encrypted_test_unencrypted_file.aes  encrypted_test_unencrypted_file_passkey.cfg  test_aes_encrypt_params.ini  test_basic_encrypt_params.ini  test_ciphertexts_passkey.cfg  test_engine_namedtuples.txt  test_quick_encrypt_file.cfg  test_quick_encrypt_text.cfg  test_quick_engines.txt
