[metadata]
name = cipher_engine
version = 0.4.0
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description = Versatile cryptographic utility designed for secure encryption and decryption operations. It supports various cryptographic algorithms, implements key derivation functions, and facilitates secure storage using INI/JSON serializations.
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/CipherEngine/tree/main
download_url = https://github.com/yousefabuz17/CipherEngine.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.10
install_requires = 
    pytest
    numpy
    psutil
    setuptools
    cryptography
    pycryptodome
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src